# python-minesweeper

./: .gitignore  README.md  board.py  cell.py  game.py  main.py  pyproject.toml
tests/: test_board.py
ui/: renderer.py
